  SortedSetDocValues#docValueCount(). (Greg Miller)

Optimizations
---------------------
* LUCENE-8519: MultiDocValues.getNormValues should not call getMergedFieldInfos (Rushabh Shah)

* GITHUB#961: BooleanQuery can return quick counts for simple boolean queries.
  (Adrien Grand)

* LUCENE-10618: Implement BooleanQuery rewrite rules based for minimumShouldMatch. (Fang Hou)

Bug Fixes
---------------------

* LUCENE-10574: Prevent pathological O(N^2) merging. (Adrien Grand)

* LUCENE-10584: Properly support #getSpecificValue for hierarchical dims in SSDV faceting.
  (Greg Miller)

* LUCENE-10582: Fix merging of overridden CollectionStatistics in CombinedFieldQuery (Yannick Welsch)

* LUCENE-10563: Fix failure to tessellate complex polygon (Craig Taverner)

* LUCENE-10605: Fix error in 32bit jvm object alignment gap calculation (Sun Wuqiang)

* GITHUB#956: Make sure KnnVectorQuery applies search boost. (Julie Tibshirani)

* LUCENE-10598: SortedSetDocValues#docValueCount() should be always greater than zero. (Lu Xugang)

* LUCENE-10600: SortedSetDocValues#docValueCount should be an int, not long (Lu Xugang)

* LUCENE-10611: Fix failure when KnnVectorQuery has very selective filter (Kaival Parikh)

* LUCENE-10607: Fix potential integer overflow in maxArcs computions (Tang Donghai)

Other
---------------------

* LUCENE-10370: pass proper classpath/module arguments for forking jvms from within tests. (Dawid Weiss)

* LUCENE-10604: Improve ability to test and debug triangulation algorithm in Tessellator.
  (Craig Taverner)

* GITHUB#922: Remove unused and confusing FacetField indexing options (Gautam Worah)

Build
---------------------

* GITHUB#976: Exclude Lucene's own JAR files from classpath entries in Eclipse config.
  (Uwe Schindler)

======================= Lucene 9.2.0 =======================

API Changes
---------------------

* LUCENE-10325: Facets API extended to support getTopFacets. (Yuting Gan)
